tests/PhiCore/compile_failure/src/core/not_null/nullptr.fail.cpp
#include <phi/core/NotNull.hpp>

int main()
{
    phi::NotNull<int*> p = nullptr;
}
